[gd_scene load_steps=21 format=3 uid="uid://spdmg8vdtjiu"]

[ext_resource type="Script" uid="uid://dmjnvc52tc7xw" path="res://addons/Misc/Scripts/ParticlesManagerScript.gd" id="1_bhb70"]

[sub_resource type="Curve" id="Curve_nv6qg"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.749049, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0173228), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_8cnkk"]
curve = SubResource("Curve_nv6qg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kdux6"]
particle_flag_align_y = true
spread = 180.0
initial_velocity_min = 12.0
initial_velocity_max = 16.0
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_8cnkk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7gqp1"]
albedo_color = Color(1, 0.392157, 0, 1)
emission_enabled = true
emission = Color(1, 0.392157, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_sot0i"]
material = SubResource("StandardMaterial3D_7gqp1")
top_radius = 0.1
bottom_radius = 0.0

[sub_resource type="Curve" id="Curve_1a0od"]
_data = [Vector2(0.00760456, 0), 0.0, 0.0, 0, 0, Vector2(0.669202, 0.559843), 0.0, 0.0, 0, 0, Vector2(0.988593, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_rjx40"]
curve = SubResource("Curve_1a0od")

[sub_resource type="Curve" id="Curve_repro"]
_data = [Vector2(0, 0.0173228), 0.0, 0.0, 0, 0, Vector2(0.262357, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_v1u6g"]
curve = SubResource("Curve_repro")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_utvry"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
gravity = Vector3(0, 5, 0)
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_v1u6g")
color = Color(0.509286, 0.509286, 0.509286, 1)
alpha_curve = SubResource("CurveTexture_rjx40")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0hccp"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_aq7t0"]
material = SubResource("StandardMaterial3D_0hccp")
radial_segments = 8
rings = 4

[sub_resource type="Gradient" id="Gradient_bbxys"]
colors = PackedColorArray(1, 0.705882, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_42ouf"]
gradient = SubResource("Gradient_bbxys")

[sub_resource type="Curve" id="Curve_kenu7"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0.026616, 2), 0.0, 0.0, 0, 0, Vector2(1, 1.09921), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mla43"]
curve = SubResource("Curve_kenu7")

[sub_resource type="Curve" id="Curve_erwrm"]
_data = [Vector2(0, 0.0173228), 0.0, 0.0, 0, 0, Vector2(0.262357, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_siehq"]
curve = SubResource("Curve_erwrm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bqul1"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, -1, 0)
spread = 90.0
initial_velocity_min = 2.0
initial_velocity_max = 4.0
gravity = Vector3(0, 5, 0)
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_siehq")
color = Color(1, 0.705882, 0, 1)
color_ramp = SubResource("GradientTexture1D_42ouf")
emission_curve = SubResource("CurveTexture_mla43")

[node name="ParticlesManager" type="Node3D"]
script = ExtResource("1_bhb70")

[node name="DebrisParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 48
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_kdux6")
draw_pass_1 = SubResource("CylinderMesh_sot0i")

[node name="SmokeParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 24
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_utvry")
draw_pass_1 = SubResource("SphereMesh_aq7t0")

[node name="FireParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 24
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_bqul1")
draw_pass_1 = SubResource("SphereMesh_aq7t0")
